updating local exercise to remote
