# goweb/C4 - GO Web/ejercicioTT/docs/swagger.json
@@ -207,7 +207,7 @@
                 "tags": [
                     "Usuarios"
                 ],
-                "summary": "Update a user by Id",
+                "summary": "Patch a user by Id",
                 "operationId": "update-user-by-id",
                 "parameters": [
                     {
@@ -219,13 +219,13 @@
                     },
                     {
                         "type": "string",
-                        "description": "id from user to update",
+                        "description": "id from user to patch",
                         "name": "id",
                         "in": "path",
                         "required": true
                     },
                     {
-                        "description": "User to update",
+                        "description": "User to patch",
                         "name": "usuario",
                         "in": "body",
                         "required": true,
@@ -261,9 +261,6 @@
         "handler.request": {
             "type": "object",
             "properties": {
-                "activo": {
-                    "type": "boolean"
-                },
                 "altura": {
                     "type": "number"
                 },
@@ -275,11 +272,6 @@
                 },
                 "email": {
                     "type": "string"
-                },
-                "fecha": {
-                    "type": "string",
-                    "format": "date-time",
-                    "example": "2022-07-12T00:53:16.535668Z"
                 },
                 "nombre": {
                     "type": "string"
